# MarsColony

./: .gitignore  CMakeLists.txt  ClassDiagram2.cd  README.md
GTest/: WrapperTest.cpp
UnitTestMachine/: CacheTest.cpp  ComponentTest.cpp  EntityTest.cpp  FrameTest.cpp  ProperBodyTest.cpp  UtilitiesTest.cpp  VelocityTest.cpp  VisibleTest.cpp  WrapperTest.cpp  cellTest.cpp
data/defaultMaps/: map0.txt  structure_of_map.txt
source/: Config.hpp  Math.hpp  Utilities.hpp  main.cpp
source/LoopManager/: LoopManager.cpp  LoopManager.hpp
source/cache/: Cache.hpp
source/ecs/component/: Collidable.hpp  Component.hpp  ProperBody.hpp  Selection.hpp  SimpleDrawable.hpp  Velocity.cpp  Velocity.hpp  Visible.hpp  Weapon.cpp  Weapon.hpp  unitPosition.hpp
source/ecs/entity/: Entity.cpp  Entity.hpp
source/entities/: id.hpp
source/entities/bullet/: bullet.cpp  bullet.hpp
source/entities/cell/: cell.cpp  cell.hpp
source/entities/icon/: Icon.cpp  Icon.hpp
source/entities/player/: player.cpp  player.hpp
source/eventControl/: EventControl.cpp  EventControl.hpp
source/eventDock/: EventDock.hpp
source/features/: Visible.hpp
source/frame/: Frame.cpp  Frame.hpp
source/game/: Game.cpp  Game.hpp
source/inputManager/: InputManager.hpp
source/loader/: Loader.cpp  Loader.hpp
source/logger/: Logger.cpp  Logger.hpp
source/mapManager/: CollisionManager.cpp  CollisionManager.hpp  IconManager.cpp  IconManager.hpp  SelectionManager.cpp  SelectionManager.hpp  TilesManager.cpp  TilesManager.hpp  UIManager.cpp  UIManager.hpp  manager.hpp  mapManager.cpp  mapManager.hpp
source/mouse/: Border.cpp  Border.hpp  Mouse.cpp  Mouse.hpp
source/renderer/: renderer.cpp  renderer.hpp
source/scene/: Scene.cpp  Scene.hpp
source/states/: GameState.cpp  GameState.hpp  State.hpp  SubState.hpp
source/states/subStates/: mainGameSubState.cpp  mainGameSubState.hpp
source/wrappers/: DrawMap.hpp  EventWrapper.hpp  FunctionPointerWrapper_t.hpp  WorldWrapper.hpp  componentWrapper.hpp  point.hpp
